--- a/quest_02/PythonQuest02.ipynb
+++ b/quest_02/PythonQuest02.ipynb
@@ -165,11 +165,11 @@
     "\n",
     "            # 움직일 수 있는 새로운 위치(nx, ny)에 대해서\n",
     "            # 미로 찾기(solve_maze)를 실행한다.\n",
-    "            # (최종적으로 미로찾기에 성공하면 solve_maze가 계속 True를 return할 것이다.)\n",
+    "            # (최종적으로 미로찾기에 성공하면 solve_maze가 반복적으로 True를 return할 것이다.)\n",
     "            #\n",
-    "            # 미로 찾기를 성공 했으면 True를 리턴하고\n",
-    "            # 실패 했으면 현 위치를 이동가능 경로로 표시하고\n",
-    "            # 아직 시도하지 않은 상하좌우 중 하나의 위치를 다시 시도해 본다.\n",
+    "            # 위의 실행이(새로운 위치에서 미로 찾기) 성공 했으면 True를 리턴하고\n",
+    "            # 실패 했으면 현 위치를 다시 이동가능 경로로 표시하고\n",
+    "            # 아직 시도하지 않은 상하좌우 중 하나의 위치에서 미로 찾기를 시도해 본다.\n",
     "            if solve_maze(nx, ny):\n",
     "                return True\n",
     "            else:\n",
@@ -192,19 +192,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "id": "26wIsU7erxri"
    },
-   "outputs": [],
    "source": [
     "# 회고\n",
     "\n",
     "## Keep\n",
-    "- 원하는 결과가 나왔다.\n",
+    "- 원하는 결과가 나오게 코드를 작성했다.\n",
+    "\n",
     "## Problem\n",
-    "- 로직은 완전히 이해 못했다. 템플릿이 있어서 하다 보니 되었음.\n",
+    "- 백지에서 시작했으면 작성이 어려웠을 듯. 템플릿이 있어서 하다 보니 되었음.\n",
+    "\n",
     "## Try\n",
     "- 로직을 더 생각해 볼 것."
    ]
