--- a/quest_02/.ipynb
+++ b/quest_02/.ipynb
@@ -64,7 +64,8 @@
      "height": 250
     },
     "id": "2j2x3thdGexU",
-    "outputId": "1fd06a25-98ca-49e1-f3f9-7f9b3afd49a2"
+    "outputId": "1fd06a25-98ca-49e1-f3f9-7f9b3afd49a2",
+    "scrolled": false
    },
    "outputs": [
     {
