--- a/quest_02/PythonQuest02.ipynb
+++ b/quest_02/PythonQuest02.ipynb
@@ -64,7 +64,8 @@
      "height": 250
     },
     "id": "2j2x3thdGexU",
-    "outputId": "1fd06a25-98ca-49e1-f3f9-7f9b3afd49a2"
+    "outputId": "1fd06a25-98ca-49e1-f3f9-7f9b3afd49a2",
+    "scrolled": false
    },
    "outputs": [
     {
@@ -203,10 +204,10 @@
     "- 원하는 결과가 나오게 코드를 작성했다.\n",
     "\n",
     "## Problem\n",
-    "- 백지에서 시작했으면 작성이 어려웠을 듯. 템플릿이 있어서 하다 보니 되었음.\n",
+    "- 백지에서 시작했으면 작성이 어려웠을 듯.\n",
     "\n",
     "## Try\n",
-    "- 로직을 더 생각해 볼 것."
+    "- 코드를 작성하기 전에 비슷한 문제에 대한 해결 방법이 있는지 검색해 볼 것.\n"
    ]
   }
  ],
