#다시 이전으로 돌아가기 코드 추가

--- a/quest_02/PythonQuest02.ipynb
+++ b/quest_02/PythonQuest02.ipynb
@@ -161,7 +161,6 @@
     "            pendown()\n",
     "            # 다음 위치로 이동\n",
     "            goto(nx*10, ny*10)  # 거북이 다음 위치로 이동\n",
-    "\n",
     "            penup()\n",
     "\n",
     "            # 움직일 수 있는 새로운 위치(nx, ny)에 대해서\n",
@@ -175,7 +174,10 @@
     "                return True\n",
     "            else:\n",
     "                # 다시 이전으로 돌아가기\n",
-    "\n",
+    "                pendown()\n",
+    "                goto(x*10, y*10)\n",
+    "                penup()\n",
+    "                \n",
     "                # 표시된 길 0표시(지우기)\n",
     "                maze[x][y] = 0\n",
     "\n",
@@ -205,6 +207,7 @@
     "\n",
     "## Problem\n",
     "- 백지에서 시작했으면 작성이 어려웠을 듯.\n",
+    "- \"# 다시 이전으로 돌아가기\"가 무슨 뜻인지 몰랐다.\n",
     "\n",
     "## Try\n",
     "- 코드를 작성하기 전에 비슷한 문제에 대한 해결 방법이 있는지 검색해 볼 것.\n"
