Python Main Quest

--- a/Python_quest/MainQuest/Aiffel.ipynb
+++ b/Python_quest/MainQuest/Aiffel.ipynb
@@ -69,7 +69,9 @@
     "    \n",
     "    # 모든 그루의 정보 디스플레이\n",
     "    def display_info(self):\n",
-    "        #Aiffel.grews.to_csv('grews.csv', index = False)\n",
+    "        # 화일로 저장\n",
+    "        Aiffel.grews.to_csv('grews.csv', index = False)\n",
+    "        # 화면 출력\n",
     "        print(Aiffel.grews) #['name', 'id', 'course', 'net_score', 'total_score', 'total_penalty'])\n",
     "    \n",
     "    # grew 삭제\n",
