--- a/ML_Quest/MainQuest03/3. 인공지능과 가위바위보 프로젝트.ipynb
+++ b/ML_Quest/MainQuest03/3. 인공지능과 가위바위보 프로젝트.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "06e800e6",
+   "id": "8a33dc9a",
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba548709",
+   "id": "43cd80f0",
    "metadata": {},
    "source": [
     "### 이미지 만들기\n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0f7c17c9",
+   "id": "d79dbafc",
    "metadata": {},
    "outputs": [
     {
@@ -58,10 +58,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "808b3b31",
+   "id": "4f0174d9",
    "metadata": {},
    "source": [
-    "### 각자 생성한 가위바위보 이미지를 모아서 훈련\n",
+    "### 학습 데이터 만들기\n",
+    "- 각자 생성한 가위바위보 이미지를 모아서 훈련\n",
     "- 사람별로 정해진 폴더 아래의 paper, scissor, rock에 가위, 바위, 보 이미지를 넣음\n",
     "\n",
     "#### 이미지 리사이즈\n",
@@ -71,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6d27eacc",
+   "id": "3ac1c986",
    "metadata": {
     "scrolled": true
    },
@@ -184,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "797e17c3",
+   "id": "1fae7438",
    "metadata": {},
    "source": [
     "### 데이터 로드\n",
@@ -196,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "daf9aaf9",
+   "id": "b923e762",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "81517668",
+   "id": "9d9237d1",
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ecfc11a",
+   "id": "46a68f02",
    "metadata": {},
    "source": [
     "### 모델 정의\n",
@@ -307,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "49ba760b",
+   "id": "062eaf6a",
    "metadata": {
     "scrolled": true
    },
@@ -386,9 +387,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cb6928ef",
+   "metadata": {},
+   "source": [
+    "### 학습 실행"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "5e51be1a",
+   "id": "fc9be2d5",
    "metadata": {
     "scrolled": false
    },
@@ -473,9 +482,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "66b6f04a",
+   "metadata": {},
+   "source": [
+    "### 학습 결과(accuracy, loss) 그래프"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "87179096",
+   "id": "e7d126ae",
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03e09631",
+   "id": "ae947776",
    "metadata": {},
    "source": [
     "### 테스트 데이터 불러 오기\n",
@@ -527,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b311a619",
+   "id": "5af7ed04",
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +612,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d69d71b1",
+   "id": "aaf6479a",
    "metadata": {},
    "source": [
     "### 테스트 정확도 "
@@ -604,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "361d8092",
+   "id": "d74235bf",
    "metadata": {
     "scrolled": true
    },
@@ -629,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69d967e5",
+   "id": "eb5e9dbc",
    "metadata": {},
    "source": [
     "### 테스트 추론 결과와 라벨 비교"
@@ -638,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "dca1d74e",
+   "id": "48488e80",
    "metadata": {},
    "outputs": [
     {
@@ -868,11 +885,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "a5cca643",
+   "execution_count": 27,
+   "id": "83a0f6b5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 이미지를 회전해서 저장하는 함수\n",
+    "# - 이미지를 회전 시켜서 학습 시키는데 사용\n",
+    "# - 이미지를 회전했더니 돌아간 부분에 검은 테두리가 생겨서 그런지 학습효과가 좋지는 않았음.\n",
     "from PIL import Image\n",
     "import os\n",
     "\n",
@@ -900,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51f49e83",
+   "id": "441d2194",
    "metadata": {},
    "outputs": [],
    "source": []
