--- a/ML_Quest/MainQuest04/6. 폐렴아 기다려라! [프로젝트].ipynb
+++ b/ML_Quest/MainQuest04/6. 폐렴아 기다려라! [프로젝트].ipynb
@@ -13,7 +13,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "8fe7e012",
+   "id": "632ce222",
    "metadata": {},
    "source": [
     "# README\n",
@@ -41,6 +41,9 @@
     "\n",
     "### 1.3 학습 및 결과 확인\n",
     "\n",
+    "- 모델 수렴 여부 확인\n",
+    "    - 잘 수렴합니다.\n",
+    "\n",
     "![image-2.png](attachment:image-2.png)\n",
     "\n",
     "- Test Metric\n",
@@ -51,6 +54,16 @@
     "Precision: 0.701438844203949,\n",
     "Recall: 1.0\n",
     "```\n",
+    "\n",
+    "- 데이터 반전 Augmentation하기 전 결과와 비교\n",
+    "    - Validation metric은 원 모델의 결과보다 낫습니다.\n",
+    "    - 테스트 metric의 결과는 원 모델보다 못합니다.\n",
+    "        - Accuracy = 84.6:73.4\n",
+    "        - Precision = 81.0 : 70.1\n",
+    "        - Recall = 98.5 : 1.0\n",
+    "    - 이것은 traing 데이터와 validataion 데이터에 똑 같이 반전을 적용했기 때문인 것 같습니다.\n",
+    "    - Test 데이터에는 반전을 적용하지 않았으므로, Test 데이터에 대한 예측 능력이 떨어지는 것 같습니다.\n",
+    "    - Precision은 떨어지고 Recall은 1까지 올라갑니다. \n",
     "\n",
     "## 2. Regularization\n",
     "\n",
@@ -79,6 +92,11 @@
     "Recall: 0.771794855594635\n",
     "```\n",
     "\n",
+    "- 비교\n",
+    "    - Accuracy는 원래 모델과 비슷합니다.\n",
+    "    - Precison이 가장 높고 Recall은 낮습니다.\n",
+    "\n",
+    "\n",
     "## 3. ResNet 16 구현\n",
     "### 3.1 모델 정의\n",
     "- 데이터는 [Regularization]에 정의한 대로 사용하였습니다.\n",
@@ -100,12 +118,35 @@
     "```\n",
     "\n",
     "- learning rate = 0.0003\n",
-    "\n"
+    "\n",
+    "### 3.2 결과 확인\n",
+    "\n",
+    "- 모델 수렴 여부 확인\n",
+    "    - validation metric들이 튀는 현상을 보입니다.\n",
+    "- Test metric\n",
+    "```\n",
+    "recall: 0.7718\n",
+    "Loss: 0.5613988637924194,\n",
+    "Accuracy: 0.8333333134651184,\n",
+    "Precision: 0.952531635761261,\n",
+    "Recall: 0.771794855594635\n",
+    "```\n",
+    "\n",
+    "## 4. 회고\n",
+    "\n",
+    "### 잘한점\n",
+    "- 루브릭 기준에 맞게 진행했다.\n",
+    "\n",
+    "### 문제점\n",
+    "- validation metric history가 계속 튄다. 나만 그런가?\n",
+    "\n",
+    "### 배운점\n",
+    "- ResNet의 skip connection하는 방법을 잘 알게 되었다."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "40bdc9fc",
+   "id": "4729cfc9",
    "metadata": {},
    "source": [
     "# 6-1. 프로젝트 : 폐렴 진단기 성능개선"
@@ -114,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b647f3f4",
+   "id": "ac07fc6b",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1e01644b",
+   "id": "9aa41f47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c3957fd",
+   "id": "0baa62a5",
    "metadata": {},
    "source": [
     "# [Augmentation]"
@@ -157,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbc32a6b",
+   "id": "828647f8",
    "metadata": {},
    "source": [
     "## 데이터 준비(Chap 5 내용을 반복)"
@@ -166,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df6361e2",
+   "id": "8673bbf0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -174,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "922ea438",
+   "id": "246bd8d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c78174ef",
+   "id": "a9662845",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "27537c21",
+   "id": "9aa0e3fb",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9214ffa3",
+   "id": "54269e1b",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c91d84e4",
+   "id": "1049f330",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "cbc5eb40",
+   "id": "5f87ff40",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "cacae9c7",
+   "id": "37d2e8cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6765489e",
+   "id": "945d6916",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "737d0634",
+   "id": "d61375d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d5a9dcc5",
+   "id": "a21bec4b",
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6a304c47",
+   "id": "d5dfb850",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c58b37d4",
+   "id": "92937e86",
    "metadata": {},
    "source": [
     "이미지에 좌우 반전한 데이터를 학습 데이터에 추가하였습니다.\n"
@@ -412,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b4bccfcc",
+   "id": "40de0f22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9467e990",
+   "id": "45f76b32",
    "metadata": {},
    "source": [
     "## Step3. 데이터 시각화\n",
@@ -449,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "08675230",
+   "id": "09f4d9b4",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88c66dd6",
+   "id": "f8f5a899",
    "metadata": {},
    "source": [
     "데이터의 반전이 제대로 처리 되었습니다.\n",
@@ -494,7 +535,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af8745b9",
+   "id": "063dd78e",
    "metadata": {},
    "source": [
     "## Step 4. 훈련을 위한 데이터 준비"
@@ -503,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e304db84",
+   "id": "9a189917",
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eafbd3d8",
+   "id": "1dc0dbf5",
    "metadata": {},
    "source": [
     "## Step 5. 모델 학습"
@@ -582,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b6c9b0ab",
+   "id": "ec17959f",
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d96004a",
+   "id": "81f6ece6",
    "metadata": {},
    "source": [
     "## Step 6. 결과 확인"
@@ -670,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "04fe6903",
+   "id": "280c24c8",
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "5027fb15",
+   "id": "187f4700",
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +765,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ed9d742",
+   "id": "3c934118",
    "metadata": {},
    "source": [
     "# [Regularization]"
@@ -732,7 +773,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5a1c484",
+   "id": "4e0e1382",
    "metadata": {},
    "source": [
     "### Step 1. 데이터 준비\n",
@@ -742,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "59a46209",
+   "id": "b2968517",
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +877,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0ff36d7",
+   "id": "a35008a3",
    "metadata": {},
    "source": [
     "## Step 2. 모델 정의\n",
@@ -849,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "1feca9b4",
+   "id": "cde0de56",
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +966,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1cc05e1",
+   "id": "6f8fb8a4",
    "metadata": {},
    "source": [
     "## Step3. 학습"
@@ -934,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "19955af5",
+   "id": "d76ec296",
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1056,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ccc7a1a",
+   "id": "e8f17e8c",
    "metadata": {},
    "source": [
     "## Step 4. 결과 확인\n",
@@ -1037,7 +1078,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "d9d848ea",
+   "id": "b377aaaa",
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "9d016aec",
+   "id": "0c3f7776",
    "metadata": {},
    "outputs": [
     {
@@ -1091,7 +1132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52674349",
+   "id": "b83f1eca",
    "metadata": {},
    "source": [
     "# [ResNet-18 구현]"
@@ -1099,7 +1140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "089b7575",
+   "id": "dc5a66ce",
    "metadata": {},
    "source": [
     "## Step 1. 모델 정의\n",
@@ -1122,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "eddf2979",
+   "id": "861ca7b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1159,7 +1200,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d790821d",
+   "id": "61e9dc0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1207,7 +1248,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "3ba648be",
+   "id": "d0f894f8",
    "metadata": {},
    "outputs": [
     {
@@ -1346,7 +1387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ced7ef7",
+   "id": "f8ad4dbe",
    "metadata": {},
    "source": [
     "## Step 2. 학습"
@@ -1355,7 +1396,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "4a457b38",
+   "id": "fe5e3bbf",
    "metadata": {},
    "outputs": [
     {
@@ -1419,7 +1460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a1b626d",
+   "id": "d915f9fd",
    "metadata": {},
    "source": [
     "## Step 4. 결과 확인\n",
@@ -1440,7 +1481,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "fc35173b",
+   "id": "0f2fd012",
    "metadata": {},
    "outputs": [
     {
@@ -1472,7 +1513,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "26dbf7e9",
+   "id": "acccb8c4",
    "metadata": {},
    "outputs": [
     {
@@ -1499,7 +1540,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "7dd6314b",
+   "id": "93ad8732",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)\n",
@@ -1516,14 +1557,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c520b49c",
+   "id": "aa8b9821",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a9a93d58",
+   "id": "cc606fc4",
    "metadata": {},
    "source": [
     "https://github.com/alinarw/ResNet/blob/master/ResNet.ipynb"
@@ -1532,7 +1573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85662a8a",
+   "id": "90e7926c",
    "metadata": {},
    "outputs": [],
    "source": []
