Ex04 dcgan으로 cifar10 이미지 생성

--- a/ML_Quest/MainQuest03/3. 인공지능과 가위바위보 프로젝트.ipynb
+++ b/ML_Quest/MainQuest03/3. 인공지능과 가위바위보 프로젝트.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "8a33dc9a",
+   "execution_count": 1,
+   "id": "c88530c0",
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
      "output_type": "stream",
      "text": [
       "2.6.0\n",
-      "1.22.2\n"
+      "1.21.4\n"
      ]
     }
    ],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43cd80f0",
+   "id": "43b0c521",
    "metadata": {},
    "source": [
     "### 이미지 만들기\n",
@@ -36,8 +36,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "d79dbafc",
+   "execution_count": 2,
+   "id": "bd8437c2",
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f0174d9",
+   "id": "1c4e89c4",
    "metadata": {},
    "source": [
     "### 학습 데이터 만들기\n",
@@ -71,8 +71,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "3ac1c986",
+   "execution_count": 3,
+   "id": "69fb56de",
    "metadata": {
     "scrolled": true
    },
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fae7438",
+   "id": "4246804c",
    "metadata": {},
    "source": [
     "### 데이터 로드\n",
@@ -196,8 +196,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "b923e762",
+   "execution_count": 4,
+   "id": "643e228d",
    "metadata": {},
    "outputs": [
     {
@@ -277,8 +277,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "9d9237d1",
+   "execution_count": 5,
+   "id": "6be8e3d5",
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46a68f02",
+   "id": "c714db23",
    "metadata": {},
    "source": [
     "### 모델 정의\n",
@@ -307,8 +307,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "062eaf6a",
+   "execution_count": 6,
+   "id": "79026536",
    "metadata": {
     "scrolled": true
    },
@@ -317,29 +317,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_3 (Conv2D)            (None, 26, 26, 16)        448       \n",
+      "conv2d (Conv2D)              (None, 26, 26, 16)        448       \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_3 (MaxPooling2 (None, 13, 13, 16)        0         \n",
+      "max_pooling2d (MaxPooling2D) (None, 13, 13, 16)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_4 (Conv2D)            (None, 11, 11, 32)        4640      \n",
+      "conv2d_1 (Conv2D)            (None, 11, 11, 32)        4640      \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_4 (MaxPooling2 (None, 5, 5, 32)          0         \n",
+      "max_pooling2d_1 (MaxPooling2 (None, 5, 5, 32)          0         \n",
       "_________________________________________________________________\n",
-      "conv2d_5 (Conv2D)            (None, 3, 3, 64)          18496     \n",
+      "conv2d_2 (Conv2D)            (None, 3, 3, 64)          18496     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_5 (MaxPooling2 (None, 1, 1, 64)          0         \n",
+      "max_pooling2d_2 (MaxPooling2 (None, 1, 1, 64)          0         \n",
       "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 64)                0         \n",
+      "flatten (Flatten)            (None, 64)                0         \n",
       "_________________________________________________________________\n",
-      "dense_3 (Dense)              (None, 128)               8320      \n",
+      "dense (Dense)                (None, 128)               8320      \n",
       "_________________________________________________________________\n",
-      "dense_4 (Dense)              (None, 64)                8256      \n",
+      "dense_1 (Dense)              (None, 64)                8256      \n",
       "_________________________________________________________________\n",
-      "dense_5 (Dense)              (None, 3)                 195       \n",
+      "dense_2 (Dense)              (None, 3)                 195       \n",
       "=================================================================\n",
       "Total params: 40,355\n",
       "Trainable params: 40,355\n",
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb6928ef",
+   "id": "22d8c8bc",
    "metadata": {},
    "source": [
     "### 학습 실행"
@@ -396,8 +396,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "fc9be2d5",
+   "execution_count": 7,
+   "id": "2f9e7b57",
    "metadata": {
     "scrolled": false
    },
@@ -409,45 +409,45 @@
       "Training data shape: (2466, 28, 28, 3)\n",
       "Evaluation data shape: (617, 28, 28, 3)\n",
       "Epoch 1/20\n",
-      "78/78 [==============================] - 3s 29ms/step - loss: 0.9757 - accuracy: 0.4550 - val_loss: 0.6307 - val_accuracy: 0.6985\n",
+      "78/78 [==============================] - 45s 12ms/step - loss: 0.9636 - accuracy: 0.4899 - val_loss: 0.5673 - val_accuracy: 0.6840\n",
       "Epoch 2/20\n",
-      "78/78 [==============================] - 2s 25ms/step - loss: 0.5138 - accuracy: 0.7247 - val_loss: 0.3662 - val_accuracy: 0.8152\n",
+      "78/78 [==============================] - 0s 4ms/step - loss: 0.5060 - accuracy: 0.7449 - val_loss: 0.3788 - val_accuracy: 0.8120\n",
       "Epoch 3/20\n",
-      "78/78 [==============================] - 2s 26ms/step - loss: 0.2940 - accuracy: 0.8743 - val_loss: 0.1840 - val_accuracy: 0.9190\n",
+      "78/78 [==============================] - 0s 4ms/step - loss: 0.3145 - accuracy: 0.8767 - val_loss: 0.1896 - val_accuracy: 0.9092\n",
       "Epoch 4/20\n",
-      "78/78 [==============================] - 2s 25ms/step - loss: 0.1299 - accuracy: 0.9607 - val_loss: 0.0748 - val_accuracy: 0.9838\n",
+      "78/78 [==============================] - 0s 4ms/step - loss: 0.1476 - accuracy: 0.9469 - val_loss: 0.0734 - val_accuracy: 0.9887\n",
       "Epoch 5/20\n",
-      "78/78 [==============================] - 2s 27ms/step - loss: 0.0485 - accuracy: 0.9882 - val_loss: 0.0695 - val_accuracy: 0.9773\n",
+      "78/78 [==============================] - 0s 4ms/step - loss: 0.0872 - accuracy: 0.9708 - val_loss: 0.1648 - val_accuracy: 0.9190\n",
       "Epoch 6/20\n",
-      "78/78 [==============================] - 2s 27ms/step - loss: 0.0384 - accuracy: 0.9891 - val_loss: 0.0180 - val_accuracy: 0.9919\n",
+      "78/78 [==============================] - 0s 4ms/step - loss: 0.0698 - accuracy: 0.9765 - val_loss: 0.0410 - val_accuracy: 0.9919\n",
       "Epoch 7/20\n",
-      "78/78 [==============================] - 2s 25ms/step - loss: 0.0166 - accuracy: 0.9955 - val_loss: 0.0155 - val_accuracy: 0.9968\n",
+      "78/78 [==============================] - 0s 4ms/step - loss: 0.0461 - accuracy: 0.9858 - val_loss: 0.0223 - val_accuracy: 0.9935\n",
       "Epoch 8/20\n",
-      "78/78 [==============================] - 2s 25ms/step - loss: 0.0131 - accuracy: 0.9976 - val_loss: 0.0123 - val_accuracy: 0.9951\n",
+      "78/78 [==============================] - 0s 4ms/step - loss: 0.0234 - accuracy: 0.9923 - val_loss: 0.0212 - val_accuracy: 0.9951\n",
       "Epoch 9/20\n",
-      "78/78 [==============================] - 2s 26ms/step - loss: 0.0065 - accuracy: 0.9988 - val_loss: 0.0046 - val_accuracy: 1.0000\n",
+      "78/78 [==============================] - 0s 4ms/step - loss: 0.0198 - accuracy: 0.9947 - val_loss: 0.0375 - val_accuracy: 0.9854\n",
       "Epoch 10/20\n",
-      "78/78 [==============================] - 2s 28ms/step - loss: 0.0045 - accuracy: 0.9992 - val_loss: 0.0280 - val_accuracy: 0.9919\n",
+      "78/78 [==============================] - 0s 4ms/step - loss: 0.0288 - accuracy: 0.9915 - val_loss: 0.0585 - val_accuracy: 0.9757\n",
       "Epoch 11/20\n",
-      "78/78 [==============================] - 2s 27ms/step - loss: 0.0031 - accuracy: 0.9996 - val_loss: 0.0015 - val_accuracy: 1.0000\n",
+      "78/78 [==============================] - 0s 5ms/step - loss: 0.0150 - accuracy: 0.9955 - val_loss: 0.0109 - val_accuracy: 0.9984\n",
       "Epoch 12/20\n",
-      "78/78 [==============================] - 2s 26ms/step - loss: 0.0028 - accuracy: 1.0000 - val_loss: 0.0013 - val_accuracy: 1.0000\n",
+      "78/78 [==============================] - 0s 4ms/step - loss: 0.0068 - accuracy: 0.9988 - val_loss: 0.0069 - val_accuracy: 1.0000\n",
       "Epoch 13/20\n",
-      "78/78 [==============================] - 2s 27ms/step - loss: 0.0018 - accuracy: 1.0000 - val_loss: 0.0014 - val_accuracy: 1.0000\n",
+      "78/78 [==============================] - 0s 4ms/step - loss: 0.0044 - accuracy: 1.0000 - val_loss: 0.0047 - val_accuracy: 1.0000\n",
       "Epoch 14/20\n",
-      "78/78 [==============================] - 2s 26ms/step - loss: 6.7054e-04 - accuracy: 1.0000 - val_loss: 6.1311e-04 - val_accuracy: 1.0000\n",
+      "78/78 [==============================] - 0s 4ms/step - loss: 0.0036 - accuracy: 1.0000 - val_loss: 0.0039 - val_accuracy: 1.0000\n",
       "Epoch 15/20\n",
-      "78/78 [==============================] - 2s 28ms/step - loss: 4.4983e-04 - accuracy: 1.0000 - val_loss: 5.0156e-04 - val_accuracy: 1.0000\n",
+      "78/78 [==============================] - 0s 4ms/step - loss: 0.0021 - accuracy: 1.0000 - val_loss: 0.0027 - val_accuracy: 1.0000\n",
       "Epoch 16/20\n",
-      "78/78 [==============================] - 2s 26ms/step - loss: 3.5493e-04 - accuracy: 1.0000 - val_loss: 6.9801e-04 - val_accuracy: 1.0000\n",
+      "78/78 [==============================] - 0s 4ms/step - loss: 0.0016 - accuracy: 1.0000 - val_loss: 0.0022 - val_accuracy: 1.0000\n",
       "Epoch 17/20\n",
-      "78/78 [==============================] - 2s 26ms/step - loss: 3.1436e-04 - accuracy: 1.0000 - val_loss: 4.7553e-04 - val_accuracy: 1.0000\n",
+      "78/78 [==============================] - 0s 5ms/step - loss: 0.0011 - accuracy: 1.0000 - val_loss: 0.0025 - val_accuracy: 1.0000\n",
       "Epoch 18/20\n",
-      "78/78 [==============================] - 2s 26ms/step - loss: 2.5259e-04 - accuracy: 1.0000 - val_loss: 2.5908e-04 - val_accuracy: 1.0000\n",
+      "78/78 [==============================] - 0s 5ms/step - loss: 7.5920e-04 - accuracy: 1.0000 - val_loss: 0.0042 - val_accuracy: 1.0000\n",
       "Epoch 19/20\n",
-      "78/78 [==============================] - 2s 26ms/step - loss: 2.4178e-04 - accuracy: 1.0000 - val_loss: 2.8027e-04 - val_accuracy: 1.0000\n",
+      "78/78 [==============================] - 0s 4ms/step - loss: 7.2710e-04 - accuracy: 1.0000 - val_loss: 0.0015 - val_accuracy: 1.0000\n",
       "Epoch 20/20\n",
-      "78/78 [==============================] - 2s 28ms/step - loss: 1.9735e-04 - accuracy: 1.0000 - val_loss: 2.7052e-04 - val_accuracy: 1.0000\n"
+      "78/78 [==============================] - 0s 4ms/step - loss: 5.9338e-04 - accuracy: 1.0000 - val_loss: 0.0016 - val_accuracy: 1.0000\n"
      ]
     }
    ],
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66b6f04a",
+   "id": "8bec5df6",
    "metadata": {},
    "source": [
     "### 학습 결과(accuracy, loss) 그래프"
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e7d126ae",
+   "id": "f77d3885",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae947776",
+   "id": "75d45a77",
    "metadata": {},
    "source": [
     "### 테스트 데이터 불러 오기\n",
@@ -544,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "5af7ed04",
+   "id": "cf4ec67b",
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aaf6479a",
+   "id": "478152f0",
    "metadata": {},
    "source": [
     "### 테스트 정확도 "
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "d74235bf",
+   "id": "d3fa198c",
    "metadata": {
     "scrolled": true
    },
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb5e9dbc",
+   "id": "a3a14a4d",
    "metadata": {},
    "source": [
     "### 테스트 추론 결과와 라벨 비교"
@@ -655,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "48488e80",
+   "id": "bc96e1fd",
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "83a0f6b5",
+   "id": "a0a110a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -920,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "441d2194",
+   "id": "c2156329",
    "metadata": {},
    "outputs": [],
    "source": []
