--- a/Flutter_quest/MainQuest/stock_prediction/README.ipynb
+++ b/Flutter_quest/MainQuest/stock_prediction/README.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#README"
+    "# README"
    ]
   },
   {
@@ -23,7 +23,7 @@
    "metadata": {},
    "source": [
     "## 개발 소프트웨어\n",
-    "- 닮은 차트를 찾기\n",
+    "- 닮은 차트 찾기\n",
     "\n",
     "## 개요\n",
     "- 특정 날짜를 입력 받아서 해당 차트를 보여주고\n",
@@ -61,7 +61,7 @@
     "    - images 폴더 : 차트 이미지들\n",
     "    - image_files : 차트 이미지 array데이터를 pickle화일로 저장\n",
     "    - chart_data.csv : 각 차트의 마지막 날짜와 익일 등락(라벨) 저장\n",
-    "    - feature_list : pretrain된 VGG16을 이용하여 추출한 feature를 저장\n",
+    "    - feature_list : pretrain된 VGG16을 이용하여 추출한 feature를 저장(화일 사이즈가 커서(800MB) github에는 올리지 않음)\n",
     "\n"
    ]
   },
